# hybrid-rendering-thesis

./: CMakeLists.txt  ProjectHome.md  Research.md  TODO.md  readme.txt
BART/: config.ini
BART/museum/: gears4.dds  mount6.dds
BART/procedural/: teapot.nff
BART/robots/: Robot.aff  SPARK.dds  mngirl6.dds  signracer.dds  texturer100.dds  texturer102.dds  texturer104.dds  texturer107.dds  texturer16.dds  texturer26.dds  texturer52.dds  texturer7.dds  zagurra.dds
BART/torb/: BARTScene.cpp  BARTScene.h  ini_parser.h  main.cpp
BART/torb/BARTLoader/: BARTLoader.h  BARTScene.cpp  BARTScene.h
BART/torb/Render/: Material.h
BART/torb/Scene/: Mesh.cpp  Mesh.h  SceneManager.cpp
branches/rev71/: CMakeLists.txt
branches/rev71/File/: ShaderLoader.cpp  TextureLoader.cpp
branches/rev71/Parser/: INIParser.h
branches/rev71/Render/: GBuffer.cpp  GBuffer.h  RT.h  Sampler.h  Tex2D.cpp  VBO.h
branches/rev71/Scene/: Cube.h  proto_camera.cpp
cmake/Modules/: FindGLFW.cmake  FindGlut.cmake  FindOptix.cmake  Macros.cmake
cmake/Modules/FindCUDA/: run_nvcc.cmake
depends/include/CUDA/: channel_descriptor.h  cublas.h  cublas_v2.h  cuda.h  cudaD3D10.h  cudaD3D11.h  cuda_d3d10_interop.h  cuda_d3d11_interop.h  cuda_d3d9_interop.h  cuda_runtime.h  cuda_runtime_api.h  curand_mtgp32dc_p_11213.h  cusparse.h  cusparse_v2.h  device_functions.h  driver_types.h  host_defines.h  math_functions.h  math_functions_dbl_ptx1.h  nppdefs.h  nppversion.h  sm_13_double_functions.h  surface_functions.h  texture_fetch_functions.h  texture_types.h
depends/include/GL3/: gl3.h  gl3w.c  gl3w.h
depends/include/Optix/: optix_d3d10_interop.h  optix_d3d11_interop.h  optix_gl_interop.h  optix_host.h
depends/lib/: freeglut-static-mt.lib  glfw-static-mt-debug.lib  glfw.lib  optix.1.lib  optixu.1.lib
doc/: codeformat.tex  main.tex  paper_outline.txt
doc/0/: abstract.tex  frontpage.tex
doc/0_Abstract/: abstract.tex
doc/1_Introduction/: introduction.tex
doc/2_Previous_Work/: previous_work.tex
doc/3_Rasterizer/: rasterizer.tex
doc/4_Raytracing/: raytracing.tex
doc/5_Why_Hybrid/: why_hybrid.tex
doc/6_Implementation/: implementation.tex  trimesh.cu
doc/7_Results/: results.tex
doc/8_Conclusion/: conclusion.tex
doc/Media/: gpu_timer_hybrid_plot.txt  gpu_timer_raster_only_plot.txt  gpu_timer_ray_plot.txt
doc/Old_Doc_Version/sandbox/: sandbox.tex
doc/further_work/: further_work.aux  further_work.tex
doc/opengl3/: opengl3.tex
doc/optix/: optix.tex
doc/previous_work/: previous_work.tex
glfw_optix/: CMakeLists.txt
glfw_optix/src/: OptixTriMeshLoader.cpp  cube_scene.h  main.cpp  triangle_scene.h
src/: CMakeLists.txt  Kernel.cpp  Kernel.h  config.h  main.cpp
src/File/: AssetManager.cpp  AssetManager.h  BARTLoader2.cpp  BARTLoader2.h  MaterialLoader.cpp  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/File/BARTLoader/: BARTLoader.cpp  BARTLoader.h  Declarations.h
src/Parser/: INIParser.h
src/Parser/BART/: ParseA.cpp  ParseBackground.h  ParseCone.cpp  ParseDetailLevel.cpp  ParseDetailLevel.h  ParseFill.h  ParseLight.cpp  ParseLight.h  ParseMesh.cpp  ParseMesh.h  ParsePoly.cpp  ParsePoly.h  ParseSphere.cpp  ParseSphere.h  ParseTextureStuff.cpp  ParseTextureStuff.h  ParseViewpoint.h  ParseXform.cpp
src/Raytracer/: OptixRender.cpp  OptixRender.h  OptixTriMeshLoader.cpp  OptixTriMeshLoader.h
src/Render/: ATTRIB.h  DebugOutput.cpp  DebugOutput.h  DeferredRender.cpp  DeferredRender.h  FBO.cpp  FBO.h  GBuffer.cpp  GBuffer.h  GPUTimer.cpp  IBO.cpp  IBO.h  Material.cpp  Material.h  PBO.cpp  PBO.h  Sampler.cpp  Shader.cpp  ShaderConstants.h  Tex2D.cpp  Tex2D.h  Uniform.cpp  Uniform.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Scene/: BARTMesh.cpp  BARTMesh.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeSphere.cpp  CubeSphere.h  Light.cpp  Mesh.cpp  Mesh.h  OptixInstance.cpp  OptixInstance.h  OptixMesh.cpp  OptixMesh.h  OptixNode.cpp  Quad.cpp  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  Spacejet.cpp  proto_camera.cpp  proto_camera.h
tools/run_if_newer/: Program.cs
trunk/: CMakeLists.txt
trunk/BART/: config.ini
trunk/BART/kitchen/: garden.dds  wood2.dds
trunk/BART/museum/: balls4.dds
trunk/BART/procedural/: balls.nff  lattice.nff
trunk/BART/robots/: floor-1.dds  giveme.dds  marble.dds  reteckers.dds  (+7 more)
trunk/doc/: main.tex  optix_nodes.txt  paper_outline.txt
trunk/glfw_optix/: CMakeLists.txt
trunk/src/: CMakeLists.txt  Kernel.cpp  Kernel.h  main.cpp
trunk/src/File/: BARTLoader2.cpp  BARTLoader2.h  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
trunk/src/File/BARTLoader/: BARTLoader.cpp  Declarations.h  animation.cpp
trunk/src/Parser/: INIParser.h
trunk/src/Parser/BART/: ParseA.h  ParseBackground.cpp  ParseComment.cpp  ParseComment.h  ParseCone.h  ParseFill.cpp  ParseFill.h  ParseKeyFrames.cpp  ParseKeyFrames.h  ParseMesh.cpp  ParseMesh.h  ParsePoly.cpp  ParseViewpoint.cpp  ParseXform.h
trunk/src/Raytracer/: OptixRender.cpp  OptixRender.h
trunk/src/Render/: ATTRIB.h  DebugOutput.cpp  DeferredRender.cpp  DeferredRender.h  FBO.cpp  FBO.h  GBuffer.cpp  GBuffer.h  GPUTimer.h  IBO.cpp  IBO.h  Material.cpp  Material.h  PBO.cpp  PBO.h  RT.cpp  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  ShaderConstants.h  Tex2D.cpp  Tex2D.h  Tex2DArray.cpp  Tex2DArray.h  Uniform.cpp  Uniform.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
trunk/src/Render/Passes/Bloom/: Bloom_Pass.cpp
trunk/src/Render/Passes/Final/: Final_Pass.cpp  Final_Pass.h
trunk/src/Render/Passes/GBuffer/: GBuffer_Pass.cpp  GBuffer_Pass.h
trunk/src/Render/Passes/Raytrace/: Raytrace_Pass.cpp  Raytrace_Pass.h
trunk/src/Scene/: BARTMesh.cpp  Camera.cpp  Camera.h  Cube.cpp  CubeSphere.cpp  Light.cpp  Light.h  Mesh.cpp  Mesh.h  MeshData_t.h  OptixInstance.cpp  OptixMesh.cpp  OptixMesh.h  OptixNode.cpp  OptixNode.h  Quad.cpp  Quad.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  Spacejet.cpp  Spacejet.h  proto_camera.cpp  proto_camera.h
wiki/: Research.wiki  TODO.wiki
(+841 files in other folders)
